doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\Random Coding Things\Greenfoot Standalone\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\extensions\greenfoot.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\bluejcore.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\bluejeditor.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\bluejext.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\AppleJavaExtensions.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\junit-4.11.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\hamcrest-core-1.3.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\bluej.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\diffutils-1.2.1.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\commons-httpclient-3.1.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\commons-logging-api-1.1.2.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\commons-codec-1.3.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\jl1.0.1.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\opencsv-2.3.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\xom-1.2.9.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\lang-stride.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\guava-17.0.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\javassist-3.18.0.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\commons-vfs2-2.0.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\httpclient-4.1.1.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\httpcore-4.1.jar;D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\httpmime-4.1.1.jar;C:\Users\killa\teamworking
-d
C:\Users\killa\teamworking\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
D:\Random Coding Things\Greenfoot Standalone\greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\killa\teamworking\TestWorld.java
<---- end of javadoc command ---->
Loading source file C:\Users\killa\teamworking\TestWorld.java...
C:\Users\killa\teamworking\TestWorld.java:30: error: illegal start of expression
        worldTwo(hero,);
                      ^
1 error
